--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "@types/cookies": "^0.7.5",
+    "@types/node": "^14.14.7",
+    "@types/url-parse": "^1.4.3",
+    "cookies": "^0.8.0",
     "fallible": "ssh://git@github.com:gregor-smith/fallible.git",
-    "tslib": "^2.0.3"
+    "tslib": "^2.0.3",
+    "url-parse": "^1.4.7"
   },
   "scripts": {
     "build-cjs": "tsc",
