--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "cookies": "^0.8.0",
     "fallible": "ssh://git@github.com:gregor-smith/fallible.git",
     "piper": "ssh://git@github.com:gregor-smith/piper.git",
-    "tslib": "^2.0.3",
-    "url-parse": "^1.4.7"
+    "tslib": "^2.0.3"
   },
   "scripts": {
     "build-cjs": "tsc",
