--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "jest": "^26.6.3",
+    "keygrip": "^1.1.0",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@types/cookies": "^0.7.5",
+    "@types/keygrip": "^1.0.2",
     "@types/node": "^14.14.7",
     "@types/url-parse": "^1.4.3",
-    "cookies": "^0.8.0",
     "fallible": "ssh://git@github.com:gregor-smith/fallible.git",
+    "js-base64": "^3.6.0",
     "piper": "ssh://git@github.com:gregor-smith/piper.git",
     "tslib": "^2.0.3"
   },
