--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "jest": "^26.6.3",
+    "jest-extended": "^0.11.5",
     "keygrip": "^1.1.0",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
