--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^26.0.15",
-    "@types/ws": "^7.4.0",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "keygrip": "^1.1.0",
@@ -26,7 +25,8 @@
     "fallible": "ssh://git@github.com:gregor-smith/fallible.git",
     "piper": "ssh://git@github.com:gregor-smith/piper.git",
     "tslib": "^2.0.3",
-    "ws": "^7.4.0"
+    "ws": "^7.4.0",
+    "@types/ws": "^7.4.0"
   },
   "scripts": {
     "build-cjs": "tsc",
