--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
   "author": "Gregor Smith",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.16",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "keygrip": "^1.1.0",
     "ts-jest": "^26.4.3",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "@types/keygrip": "^1.0.2",
-    "@types/node": "^14.14.7",
+    "@types/node": "^14.14.10",
     "@types/url-parse": "^1.4.3",
+    "@types/ws": "^7.4.0",
     "fallible": "ssh://git@github.com:gregor-smith/fallible.git",
     "piper": "ssh://git@github.com:gregor-smith/piper.git",
     "tslib": "^2.0.3",
-    "ws": "^7.4.0",
-    "@types/ws": "^7.4.0"
+    "ws": "^7.4.0"
   },
   "scripts": {
     "build-cjs": "tsc",
