--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "@types/node": "^14.14.10",
     "@types/url-parse": "^1.4.3",
     "@types/ws": "^7.4.0",
-    "fallible": "ssh://git@github.com:gregor-smith/fallible.git",
-    "piper": "ssh://git@github.com:gregor-smith/piper.git",
+    "fallible": "link:./../fallible",
     "tslib": "^2.0.3",
     "ws": "^7.4.0"
   },
