--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^26.0.16",
+    "@types/mime-types": "^2.1.0",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "keygrip": "^1.1.0",
@@ -22,10 +23,12 @@
     "@types/keygrip": "^1.0.2",
     "@types/node": "^14.14.10",
     "@types/secure-json-parse": "^1.0.2",
-    "@types/url-parse": "^1.4.3",
     "@types/ws": "^7.4.0",
     "fallible": "link:./../fallible",
+    "fallible-fs": "link:./../fallible-fs",
     "formidable": "^2.0.0-canary.20200504.1",
+    "mime-types": "^2.1.27",
+    "path-to-regexp": "^6.2.0",
     "raw-body": "^2.4.1",
     "secure-json-parse": "^2.1.0",
     "tslib": "^2.0.3",
