more tsconfig options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,6 +66,9 @@
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */,
     "resolveJsonModule": true,
+    "importsNotUsedAsValues": "error",
+    "newLine": "lf",
+    "noUncheckedIndexedAccess": true
   },
   "include": [
     "./src/**/*"
