--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "formidable": "link:./../formidable",
     "path-to-regexp": "^6.2.0",
     "raw-body": "^2.4.1",
+    "sanitize-filename": "^1.6.3",
     "secure-json-parse": "^2.1.0",
     "tslib": "^2.0.3",
     "ws": "^7.4.0"
