--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -3,7 +3,6 @@
   "compilerOptions": {
     "target": "es2019",
     "module": "es6",
-    "outDir": "./dist/esm-es2019",
-    "declaration": false
+    "outDir": "./dist/esm-es2019"
   }
 }
