--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^26.0.16",
-    "@types/memorystream": "^0.3.0",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "keygrip": "^1.1.0",
-    "memorystream": "^0.3.1",
+    "mock-http": "^1.1.0",
     "ts-jest": "^26.4.3",
     "typescript": "^4.1.2"
   },
