--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "fallible-server",
   "version": "0.1.0",
-  "main": "dist/cjs-es5/index.js",
-  "module": "dist/esm-es2019/index.js",
-  "types": "dist/cjs-es5/index.d.ts",
+  "type": "module",
+  "main": "./dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./general-utils": "./dist/general-utils.js"
+  },
+  "sideEffects": false,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gregor-smith/fallible-server.git"
@@ -11,12 +15,16 @@
   "author": "Gregor Smith",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/jest": "^26.0.16",
-    "jest": "^26.6.3",
+    "babel-jest": "^26.6.3",
+    "jest": "^27.0.0-next.2",
     "jest-extended": "^0.11.5",
     "keygrip": "^1.1.0",
     "mock-http": "^1.1.0",
-    "ts-jest": "^26.4.3",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.2"
   },
   "dependencies": {
@@ -30,12 +38,10 @@
     "raw-body": "^2.4.1",
     "sanitize-filename": "^1.6.3",
     "secure-json-parse": "^2.1.0",
-    "tslib": "^2.0.3",
     "ws": "^7.4.0"
   },
   "scripts": {
-    "build-cjs": "tsc",
-    "build-esm": "tsc -p tsconfig.esm.json",
-    "test": "jest"
+    "build": "tsc",
+    "test": "tsc -p ./tsconfig.test.json && jest"
   }
 }
