--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "fallible-server",
   "version": "0.1.0",
   "type": "module",
-  "main": "./dist/index.js",
+  "main": "./dist/src/index.js",
   "exports": {
-    ".": "./dist/index.js",
-    "./general-utils": "./dist/general-utils.js"
+    ".": "./dist/src/index.js",
+    "./general-utils": "./dist/src/general-utils.js"
   },
   "sideEffects": false,
   "repository": {
@@ -17,14 +17,12 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
     "@types/jest": "^26.0.16",
     "babel-jest": "^26.6.3",
     "jest": "^27.0.0-next.2",
     "jest-extended": "^0.11.5",
     "keygrip": "^1.1.0",
     "mock-http": "^1.1.0",
-    "ts-node": "^9.1.1",
     "typescript": "^4.1.2"
   },
   "dependencies": {
@@ -41,8 +39,7 @@
     "ws": "^7.4.0"
   },
   "scripts": {
-    "build": "tsc -p ./src/tsconfig.json",
-    "check-tests": "tsc -p ./tests/tsconfig.json",
+    "build": "tsc",
     "test": "jest"
   }
 }
