--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "type": "module",
   "exports": {
-    ".": "./dist/index.js",
+    ".": "./dist/fallible-server.js",
     "./general-utils": "./dist/general-utils.js",
     "./server-utils": "./dist/server-utils.js",
     "./server": "./dist/server.js",
-    "./dist/general-utils.js": "./dist/general-utils.js"
+    "./types": "./dist/types.js"
   },
   "sideEffects": false,
   "repository": {
