--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "jest-extended": "^0.11.5",
     "keygrip": "^1.1.0",
     "mock-http": "^1.1.0",
-    "typescript": "4.5.0-dev.20211101"
+    "typescript": "^4.7.0-dev.20220215"
   },
   "dependencies": {
     "@types/keygrip": "^1.0.2",
-    "@types/node": "^16.11.6",
+    "@types/node": "^17.0.17",
     "@types/secure-json-parse": "^1.0.2",
     "@types/ws": "^7.4.0",
     "fallible": "link:./../fallible",
     "fallible-fs": "link:./../fallible-fs",
-    "formidable": "link:./../formidable",
+    "formidable": "v3",
     "raw-body": "^2.4.1",
     "sanitize-filename": "^1.6.3",
     "secure-json-parse": "^2.3.1",
