--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "author": "Gregor Smith",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.8",
-    "@babel/preset-typescript": "^7.13.0",
-    "@types/jest": "^26.0.20",
-    "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "jest-extended": "^0.11.5",
+    "@babel/core": "^7.17.4",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.4.0",
+    "babel-jest": "^27.5.1",
+    "jest": "^28.0.0-alpha.1",
+    "jest-extended": "^2.0.0",
     "keygrip": "^1.1.0",
     "mock-http": "^1.1.0",
     "typescript": "^4.7.0-dev.20220215"
