--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "exports": {
     ".": "./dist/fallible-server.js",
-    "./general-utils": "./dist/general-utils.js",
-    "./server-utils": "./dist/server-utils.js",
+    "./utils": "./dist/utils.js",
     "./server": "./dist/server.js",
     "./types": "./dist/types.js"
   },
