--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/node": "^17.0.17",
     "@types/secure-json-parse": "^1.0.2",
     "@types/ws": "^7.4.0",
-    "fallible": "link:./../fallible",
+    "fallible": "https://github.com/gregor-smith/fallible.git",
     "formidable": "v3",
     "secure-json-parse": "^2.3.1",
     "ws": "^7.4.3"
