use standard headers object (with polyfill until node 18 is released)

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/ws": "^8.5.3",
     "fallible": "https://github.com/gregor-smith/fallible.git#v1.0.0",
     "formidable": "v3",
+    "headers-polyfill": "^3.0.7",
     "secure-json-parse": "^2.4.0",
     "ws": "^7.4.6"
   },
